[package]
name = "waldo"
version = "0.1.0"
edition = "2024"

[features]
default = ["tokio/sync"]
benchmark = ["clap", "anyhow", "indicatif", "tokio"]

[[bin]]
name = "runtime"
path = "src/benches/runtime.rs"
required-features = ["benchmark"]

[[bin]]
name = "storage"
path = "src/benches/storage.rs"
required-features = ["benchmark"]

[dependencies]
libc = "0.2"
flume = "0.12"
rayon = "1.11"
futures = "0.3"
assert2 = "0.3"
memmap2 = "0.9"
io-uring = "0.7"
thiserror = "2.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
oneshot = { version = "0.1", features = ["async"] }
bytemuck = { version = "1.24", features = ["derive"] }

# For benchmark binaries.
anyhow = { version = "1.0", optional = true }
indicatif = { version = "0.18", optional = true }
clap = { version = "4.5", optional = true, features = ["derive"] }
tokio = { version = "1.48", optional = true, features = [
    "macros",
    "sync",
    "fs",
    "rt-multi-thread",
    "time",
] }

[dev-dependencies]
anyhow = "1.0"
tempdir = "0.3"
proptest = "1.9"

[profile.bench]
debug = true
inherits = "release"
